# crowCloud

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  release-plz.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/agents/: provider-implementer.md  rust-reviewer.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  provider_request.yml
.github/workflows/: cd_publish.yml  cd_release.yml  ci_frontend.yml  ci_rust.yml  ci_security.yml  frontend-ci.yml  publish.yml  rust-ci.yml  security-audit.yml
charts/crowcloud/: Chart.yaml  values.yaml
charts/crowcloud/templates/: NOTES.txt  _helpers.tpl  clusterrole-api.yaml  clusterrole-operator.yaml  clusterrolebinding-api.yaml  clusterrolebinding-operator.yaml  deployment-api.yaml  deployment-frontend.yaml  deployment-operator.yaml  ingress.yaml  postgres-cluster.yaml  secret.yaml  service-api.yaml  service-frontend.yaml  serviceaccount-api.yaml  serviceaccount-operator.yaml
conversations/: 2026-06-29-203456-this-session-is-being-continued-from-a-previous-c.txt  2026-07-09-212249-claude-settings-and-vm-proxmox-crd-driven-operator.txt
crates/crow-api/: Cargo.toml
crates/crow-api/src/: error.rs  main.rs  middleware.rs  providers.rs  state.rs
crates/crow-api/src/routes/: auth.rs  domains.rs  ip_pools.rs  k8s_bootstrap.rs  k8s_metrics.rs  mod.rs  projects.rs  provider_nodes.rs  providers.rs  resource_groups.rs  resources.rs
crates/crow-auth/: Cargo.toml
crates/crow-auth/src/: jwt.rs  lib.rs  password.rs
crates/crow-cli/: Cargo.toml
crates/crow-cli/src/: client.rs  config.rs  main.rs  output.rs
crates/crow-cli/src/commands/: auth.rs  context.rs  db.rs  disk.rs  domain.rs  expose.rs  ippool.rs  k8s.rs  mod.rs  project.rs  provider.rs  rg.rs  store.rs  tunnel.rs  vm.rs
crates/crow-core/: Cargo.toml
crates/crow-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/crow-core/src/crd/: common.rs  ipam.rs  mod.rs  networking.rs  project.rs  providers.rs  resource_group.rs  resources.rs
crates/crow-db/: Cargo.toml
crates/crow-db/migrations/: 001_initial.sql  002_providers.sql  003_projects_resources.sql  004_collapse_resource_groups.sql  005_provider_nodes.sql  006_provider_templates.sql  007_widen_resource_phase.sql
crates/crow-db/src/: lib.rs
crates/crow-operator/: Cargo.toml
crates/crow-operator/src/: main.rs
crates/crow-operator/src/controllers/: database.rs  disk.rs  ip_claim.rs  ip_pool.rs  k8s_cluster.rs  mod.rs  virtual_machine.rs
crates/crow-vps-agent/: Cargo.toml
crates/crow-vps-agent/src/: main.rs  routes.rs
crates/providers/crow-provider-hetzner/: Cargo.toml
crates/providers/crow-provider-hetzner/src/: lib.rs
crates/providers/crow-provider-opnsense/: Cargo.toml
crates/providers/crow-provider-opnsense/src/: client.rs  error.rs  lib.rs
crates/providers/crow-provider-proxmox/: Cargo.toml
crates/providers/crow-provider-proxmox/src/: client.rs  error.rs  lib.rs  network.rs  node.rs  ssh.rs  vm.rs  volume.rs
crates/providers/crow-provider-registry/: Cargo.toml
crates/providers/crow-provider-registry/src/: lib.rs
crates/resources/crow-resource-database/: Cargo.toml
crates/resources/crow-resource-database/src/: lib.rs
crates/resources/crow-resource-k8s/: Cargo.toml
crates/resources/crow-resource-k8s/src/: cloud_init.rs  lib.rs
crates/resources/crow-resource-objectstore/: Cargo.toml
crates/resources/crow-resource-objectstore/src/: lib.rs
crates/resources/crow-resource-vm/: Cargo.toml
crates/resources/crow-resource-vm/src/: lib.rs
deploy/: bootstrap.sh
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.operator  Dockerfile.vps-agent  nginx-frontend.conf.template
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  disks.ts  ipPools.ts  k8sMetrics.ts  projects.ts  providerNodes.ts  providers.ts  resources.ts
frontend/src/auth/: RequireAuth.tsx  useAuth.ts
frontend/src/hooks/: useCurrentProject.tsx
frontend/src/hubs/: AllResourcesPage.tsx  HubOverviewPage.tsx  PlaceholderResourceTypePage.tsx  hubConfig.ts
frontend/src/hubs/compute/: CreateDiskPage.tsx  CreateVirtualMachinePage.tsx  DiskLayout.tsx  DiskOverviewTab.tsx  DisksPage.tsx  VirtualMachineDetailPage.tsx  VirtualMachineLayout.tsx  VirtualMachineOverviewTab.tsx  VirtualMachinesPage.tsx
frontend/src/hubs/containers/: CreateKubernetesClusterPage.tsx  KubernetesClusterLayout.tsx  KubernetesClusterMetricsTab.tsx  KubernetesClusterOverviewTab.tsx  KubernetesClustersPage.tsx
frontend/src/hubs/infrastructure/: AllHostsPage.tsx  CreateProxmoxHostPage.tsx  InfrastructureOverviewPage.tsx  ProxmoxHostsPage.tsx
frontend/src/hubs/infrastructure/host/: NodesTab.tsx  NotAvailableTab.tsx  OverviewTab.tsx  ProxmoxHostLayout.tsx  SettingsTab.tsx  VirtualMachinesTab.tsx  formatNodeStats.ts
frontend/src/hubs/infrastructure/host/node/: NodeLayout.tsx  NodeOverviewTab.tsx
frontend/src/hubs/management/: CloudHostsPage.tsx  ProjectsPage.tsx
frontend/src/hubs/networking/: CreateIpPoolPage.tsx  IpPoolsPage.tsx
frontend/src/hubs/networking/ipPool/: IpPoolLayout.tsx  OverviewTab.tsx
frontend/src/layout/: AppShell.tsx  EntityLayout.tsx  GlobalNav.tsx  HubLayout.tsx  RouterNavbar.tsx  TopBar.tsx
frontend/src/pages/: CloudHostsPage.tsx  HomePage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx
frontend/src/ui/: Breadcrumb.tsx  Button.tsx  CommandBar.tsx  DataTable.tsx  EssentialsGrid.tsx  Modal.tsx  Select.tsx  ServiceTile.tsx  StatusPill.tsx  Tabs.tsx  TextField.tsx  icons.tsx  theme.css
