[workspace]
members = [
    "crates/crow-core",
    "crates/crow-api",
    "crates/crow-db",
    "crates/crow-auth",
    "crates/crow-operator",
    "crates/crow-vps-agent",
    "crates/crow-cli",
    "crates/providers/crow-provider-proxmox",
    "crates/providers/crow-provider-hetzner",
    "crates/providers/crow-provider-registry",
    "crates/resources/crow-resource-vm",
    "crates/resources/crow-resource-k8s",
    "crates/resources/crow-resource-objectstore",
    "crates/resources/crow-resource-database",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gavin <gmcellistrem@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# web
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# kubernetes
kube = { version = "4.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.28", features = ["v1_32"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"

# database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate", "json"] }

# http client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
urlencoding = "2"

# error handling
thiserror = "2"
anyhow = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# cli
clap = { version = "4", features = ["derive", "env"] }
