[package]
name = "crow-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "crow-api"
path = "src/main.rs"

[dependencies]
crow-core = { path = "../crow-core" }
crow-db = { path = "../crow-db" }
crow-auth = { path = "../crow-auth" }
crow-provider-proxmox = { path = "../providers/crow-provider-proxmox" }

async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
