[package]
name = "crow-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "crow"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
clap.workspace = true

tabled = "0.21"
dirs = "6"
