[package]
name = "crow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
