[package]
name = "crow-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "crow-operator"
path = "src/main.rs"

[dependencies]
crow-core = { path = "../crow-core" }

tokio.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
