[package]
name = "crow-vps-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "crow-vps-agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
