[package]
name = "crow-provider-opnsense"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
crow-core = { path = "../../crow-core" }

tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
