[package]
name = "crow-provider-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
crow-core = { path = "../../crow-core" }
crow-provider-proxmox = { path = "../crow-provider-proxmox" }
crow-db = { path = "../../crow-db" }

serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
