[package]
name = "crow-resource-k8s"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
crow-core = { path = "../../crow-core" }

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
